# open-hims

./: .gitignore  Caddyfile.dev  Caddyfile.prod  Cargo.toml  EXTENSIBILITY_GUIDE.md  Makefile  README.md  build.rs  package.json  pnpm-lock.yaml  turbo.json
.github/: copilot-instructions.md
.sqlx/: query-2b1e98b567cce0e3e4e1b5da5a030f135028f8296759d04dfc9103d8877f33ad.json  query-44549a62a5bd2287b00ac08838052ed88f674ca61868c34d92ef5d75b90a9a26.json  query-47e5535f0b090b7827bcb6268bfca8d3f7aed0ecc53d5e888e99b12fa7220d02.json  query-4e012e3f5814a4d3ae1190e20b267461dde80631eaf63bd6099c52a2c996415f.json  query-52db2265f61af214d5a2eef392ce1a07099f2be8357788037bac230c98471cfa.json  query-b9b718240a9fa83a4c07ac99027e793b15d1a4c2dcc7b6177c9be25b57370bf7.json  query-f138cdd7328766f341670cbe82cc0f14dfc5d3a8eed9ff8cf9990f2a840524d1.json
apps/desktop/: package.json
apps/desktop-tauri/: index.html  package.json  vite.config.ts
apps/desktop-tauri/src/: App.css  App.tsx
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: App.tsx  app.json  package.json
apps/mobile-react-native/: App.tsx  app.json  package.json  tsconfig.json
apps/mobile-react-native/assets/: README.md
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/web-react/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-react/src/: App.tsx  index.css
apps/web/public/: manifest.json
apps/web/src/: App.tsx
benches/: main.rs
bindings/react-native/: package.json
bindings/react-native/src/: index.ts
docs/: ARCHITECTURE_DATABASE_STRATEGY.md  ASSETS_GUIDE.md  CODE_VS_DATABASE_GUIDE.md  CONTRIBUTING_EXAMPLE_BRAZIL.md  caddy-setup.md  database-framework-analysis.md
migrations/: 20231017000001_initial_healthcare_schema.sql  20231017000002_additional_healthcare_tables.sql  20231017000003_extend_medical_records.sql  2024_create_authorization_tables.sql
scripts/: create-8bit-icons.sh  create-desktop-icons.sh  create-rgba-icons.sh  generate-assets.sh  setup-hosts.sh  setup-local-dev.sh  start-desktop-tabs.sh  start-dev-tabs.sh  start-mobile-tabs.sh  start-web-tabs.sh
src/: hims_core_sdk.udl  lib.rs
src/core/: auth.rs  config.rs  errors.rs  logger.rs  mod.rs  utils.rs
src/countries/: common.rs  inheritance_examples.rs  mod.rs
src/countries/india/: central.rs  mod.rs
src/countries/usa/: federal.rs  mod.rs
src/database/: connection.rs  mod.rs
src/exporters/: api_adapters.rs  csv_fhir_import.rs  mod.rs  pdf.rs  x12_edi.rs
src/models/: mod.rs
src/modules/: mod.rs
src/security/: gdpr_consent.rs  hash_chain_logs.rs  hipaa_audit.rs  iso27001_logging.rs  mod.rs
src/standards/: abdm.rs  accreditation.rs  dicom.rs  mod.rs  terminology.rs
src/utils/: auth.rs  mod.rs
tests/: healthcare_regulations_test.rs  integration_test.rs
(+84 files in other folders)
