[package]
name = "hims-desktop"
version = "0.1.0"
description = "HIMS Desktop Application"
authors = ["HIMS Team"]
license = "MIT"
repository = "https://github.com/hims/hims-core-sdk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hims-core-sdk = { path = "../../" }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]